[gd_scene load_steps=7 format=3 uid="uid://c76uc8jpqm36x"]

[ext_resource type="Script" path="res://Scripts/Game/menu.gd" id="1_kv1l4"]
[ext_resource type="PackedScene" uid="uid://meu3hhsbxp2r" path="res://Prefabs/Utils/background.tscn" id="2_xq8dc"]
[ext_resource type="FontFile" uid="uid://bplwmjw6xt68g" path="res://Assets/Fonts/JetBrains Mono/JetBrainsMono-ExtraBold.ttf" id="3_8xoh2"]
[ext_resource type="Texture2D" uid="uid://cjova5da2khwl" path="res://Assets/Icons/play_button_2x.svg" id="4_jqycp"]
[ext_resource type="Texture2D" uid="uid://cj8skjoyevatv" path="res://Assets/Icons/play_button_2x_hover.svg" id="5_2flsn"]
[ext_resource type="Texture2D" uid="uid://cvoqg5vbj34tn" path="res://Assets/Icons/gear_2x.svg" id="5_t6dmj"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_kv1l4")

[node name="Background" parent="." instance=ExtResource("2_xq8dc")]

[node name="Title" type="Label" parent="."]
offset_top = 40.0
offset_right = 480.0
offset_bottom = 93.0
theme_override_fonts/font = ExtResource("3_8xoh2")
theme_override_font_sizes/font_size = 38
text = "NINETY DEGREE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Scores" type="VBoxContainer" parent="."]
offset_top = 324.0
offset_right = 480.0
offset_bottom = 458.0

[node name="Score" type="VBoxContainer" parent="Scores"]
layout_mode = 2
theme_override_constants/separation = -6

[node name="Label" type="Label" parent="Scores/Score"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Value" type="Label" parent="Scores/Score"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestScore" type="VBoxContainer" parent="Scores"]
layout_mode = 2
theme_override_constants/separation = -6

[node name="Label" type="Label" parent="Scores/BestScore"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "BEST SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Value" type="Label" parent="Scores/BestScore"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="."]
offset_top = 650.0
offset_right = 480.0
offset_bottom = 778.0
theme_override_constants/separation = 25
alignment = 1
metadata/_edit_lock_ = true

[node name="PlayButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
mouse_default_cursor_shape = 2
action_mode = 0
texture_normal = ExtResource("4_jqycp")
texture_hover = ExtResource("5_2flsn")
stretch_mode = 5

[node name="ConfigButton" type="TextureButton" parent="Buttons"]
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
action_mode = 0
texture_normal = ExtResource("5_t6dmj")
stretch_mode = 5
